working on oAuth

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,6 @@
 <body>
     <div id="root"></div>
     <!-- <script src="dist/bundle.js" type="application/jsx"></script> -->
-    <script src="../dist/bundle.js"></script>
+    <script src="../dist/bundle.js" type="application/jsx"></script>
 </body>
 </html>
